agregado div contenedor

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- DIV CONTENEDOR 1 -->
+
+    <div class="contenedor">
+        <div class="row">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, dignissimos!</p>
+        </div>
 </body>
 </html>
